[metadata]
name = caretta
version = 0.1.1
description = Fast multiple protein structure alignment
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/TurtleTools/caretta
author = Janani Durairaj, Mehmet Akdel
author_email = janani.durairaj@gmail.com
license = MIT License
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
;    Documentation =
    Source = https://github.com/TurtleTools/caretta
    Tracker = https://github.com/TurtleTools/caretta/issues

[options]
zip_safe = False
packages =
    caretta
    caretta/app
platforms = any
include_package_data = True
install_requires =
    numpy
    numba
    scipy
    prody
    biopython
    typer
    pyparsing
    geometricus
    arviz
python_requires = >=3.7
scripts =
    bin/caretta-app
    bin/caretta-cli

[bdist_wheel]
universal = 1

;[aliases]
;test=pytest

[options.entry_points]
console_scripts =
    caretta = caretta.__main__:main

[options.extras_require]
GUI =
    dash==1.3.1
    dash-bio==0.1.4
    cryptography
    dash-core-components==1.2.1
    dash-html-components==1.0.1
    dash-renderer==1.1.0
    plotly==3.7.1
    flask
